# python-package-template

./: .gitignore  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
